# AgenticFinOps

./: .gitignore  agent_phase1.py  main.py  pyproject.toml  requirements.txt  testing.ipynb
database/: common.py  db.py  models.py  reset.py  seed.py
migrations/: env.py
migrations/versions/: 5a6c987c3753_check.py  8281d7561acd_updated_echo_to_false.py  ba5af12d2e56_update_foreign_keys.py  ea960c1bf822_add_relationships_and_indexes.py
